--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
     color:white;
 }
 h1{
+    font-size: 70px;
+    margin-top: 50px;
+}
+h2{
     font-size: 50px;
 }
 .highlight{
@@ -20,12 +24,19 @@ h1{
 .half-width img{
     width: 75%;
 }
+.programming-hero{
+    color: orange;
+    text-decoration: none;
+
+}
 .button{
     text-decoration: none;
     color: black;
     background-color: yellow;
     padding: 10px 20px;
     font-weight: 600;
+    display: inline-block;
+    margin-top: 10px;
 }
 .button:hover{
     background-color: rgba(219, 219, 64, 0.87);
@@ -63,4 +74,8 @@ section{
     border-left: 8px solid;
     border-image: linear-gradient(yellow,cyan);
     border-image-slice:1;
+}
+footer{
+    text-align: center;
+    font-size: 15px;
 }
